--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"tailwindcss": "^3.4.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"vercel": "^35.2.3"
+	}
 }
